/* Copyright (c) 2018, John Lenz

All rights reserved.

Redistribution and use in source and binary forms, with or without
modification, are permitted provided that the following conditions are met:

    * Redistributions of source code must retain the above copyright
      notice, this list of conditions and the following disclaimer.

    * Redistributions in binary form must reproduce the above
      copyright notice, this list of conditions and the following
      disclaimer in the documentation and/or other materials provided
      with the distribution.

    * Neither the name of John Lenz, Black Maple Software, SeedTactics,
      nor the names of other contributors may be used to endorse or
      promote products derived from this software without specific
      prior written permission.

THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
"AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
(INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 */

import * as React from 'react';
import { StationOEE, StationOEEs } from './StationOEE';
import * as im from 'immutable';
import * as rtest from 'react-testing-library';
afterEach(rtest.cleanup);

import * as api from '../../data/api';

it('displays station hours', () => {
  const mins = im.Map({
    "abc #1": 40 * 60,
    "zzz #1": 3 * 60,
  });
  const pals = im.Map({
    "aaa #1": {
      pal: {
        pallet: {
          pallet: "5",
          fixtureOnPallet: "",
          onHold: false,
          numFaces: 2,
          currentPalletLocation: new api.PalletLocation({
            loc: api.PalletLocationEnum.LoadUnload,
            group: "abc",
            num: 1
          }),
        },
        material: []
      },
    }
  });
  const {container} = rtest.render(
    <StationOEEs
      date_of_current_status={new Date(Date.UTC(2016, 3, 5, 2, 7, 2))}
      station_active_minutes_past_week={mins}
      pallets={pals}
    />);
  expect(container).toMatchSnapshot('station oee table');
});

it('displays a single station oee', () => {
  const pal = {
    pallet: {
      pallet: "7",
      fixtureOnPallet: "",
      onHold: false,
      numFaces: 2,
      currentPalletLocation: new api.PalletLocation({
        loc: api.PalletLocationEnum.LoadUnload,
        group: "aaa",
        num: 1,
      }),
    },
    material: [
      {
        materialID: 10,
        jobUnique: "aaa",
        partName: "aaa",
        process: 2,
        path: 1,
        signaledInspections: ["a", "b"],
        location: new api.InProcessMaterialLocation({
          type: api.LocType.OnPallet,
          pallet: "7",
          face: 1,
          queuePosition: 0,
        }),
        action: new api.InProcessMaterialAction({
          type: api.ActionType.Loading,
          loadOntoFace: 1,
          processAfterLoad: 2,
          pathAfterLoad: 1,
        }),
      }
    ]
  };

  const {container} = rtest.render(
    <StationOEE
      date_of_current_status={new Date(Date.UTC(2016, 3, 5, 2, 7, 2))}
      station="aaa"
      oee={0.43}
      pallet={pal}
    />);
  expect(container).toMatchSnapshot('station oee gauge');
});

it('displays a single station without oee', () => {
  const {container} = rtest.render(
    <StationOEE
      date_of_current_status={new Date(Date.UTC(2016, 3, 5, 2, 7, 2))}
      station="bbb"
      oee={0.01}
    />);
  expect(container).toMatchSnapshot('station empty guage');
});
