// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`displays a single station oee: station oee gauge 1`] = `
<div>
  <svg
    viewBox="0 0 400 400"
  >
    <path
      d="M 263.86689373476094 335.72405786990294 A 150 150 1.5707963267948966 0 0 200 50"
      fill="transparent"
      stroke="#795548"
      stroke-width="10"
    />
    <path
      d="M 199.99999999999997 50 A 150 150 1.5707963267948966 1 0 263.86689373476094 335.72405786990294"
      fill="transparent"
      stroke="#E0E0E0"
      stroke-width="10"
    />
    <text
      style="font-size: 45px;"
      text-anchor="middle"
      x="200"
      y="190"
    >
      aaa
    </text>
    <text
      style="font-size: 30px;"
      text-anchor="middle"
      x="200"
      y="250"
    >
      Pal 7
    </text>
  </svg>
</div>
`;

exports[`displays a single station without oee: station empty guage 1`] = `
<div>
  <svg
    viewBox="0 0 400 400"
  >
    <circle
      cx="200"
      cy="200"
      fill="transparent"
      r="150"
      stroke="#E0E0E0"
      stroke-width="10"
    />
    <text
      style="font-size: 45px;"
      text-anchor="middle"
      x="200"
      y="190"
    >
      bbb
    </text>
    <text
      style="font-size: 30px;"
      text-anchor="middle"
      x="200"
      y="250"
    >
      Empty
    </text>
  </svg>
</div>
`;

exports[`displays station hours: station oee table 1`] = `
<div>
  <div
    class="MuiGrid-container-1 MuiGrid-justify-xs-space-around-21"
  >
    <div
      class="MuiGrid-item-2 MuiGrid-grid-xs-12-41 MuiGrid-grid-sm-6-49 MuiGrid-grid-md-4-61 MuiGrid-grid-lg-3-74"
    >
      <svg
        viewBox="0 0 400 400"
      >
        <circle
          cx="200"
          cy="200"
          fill="transparent"
          r="150"
          stroke="#E0E0E0"
          stroke-width="10"
        />
        <text
          style="font-size: 45px;"
          text-anchor="middle"
          x="200"
          y="190"
        >
          aaa #1
        </text>
        <text
          style="font-size: 30px;"
          text-anchor="middle"
          x="200"
          y="250"
        >
          Pal 5
        </text>
      </svg>
    </div>
    <div
      class="MuiGrid-item-2 MuiGrid-grid-xs-12-41 MuiGrid-grid-sm-6-49 MuiGrid-grid-md-4-61 MuiGrid-grid-lg-3-74"
    >
      <svg
        viewBox="0 0 400 400"
      >
        <path
          d="M 349.580569577177 188.79048596203634 A 150 150 1.5707963267948966 0 0 200 50"
          fill="transparent"
          stroke="#795548"
          stroke-width="10"
        />
        <path
          d="M 199.99999999999997 50 A 150 150 1.5707963267948966 1 0 349.580569577177 188.79048596203634"
          fill="transparent"
          stroke="#E0E0E0"
          stroke-width="10"
        />
        <text
          style="font-size: 45px;"
          text-anchor="middle"
          x="200"
          y="190"
        >
          abc #1
        </text>
        <text
          style="font-size: 30px;"
          text-anchor="middle"
          x="200"
          y="250"
        >
          Empty
        </text>
      </svg>
    </div>
    <div
      class="MuiGrid-item-2 MuiGrid-grid-xs-12-41 MuiGrid-grid-sm-6-49 MuiGrid-grid-md-4-61 MuiGrid-grid-lg-3-74"
    >
      <svg
        viewBox="0 0 400 400"
      >
        <circle
          cx="200"
          cy="200"
          fill="transparent"
          r="150"
          stroke="#E0E0E0"
          stroke-width="10"
        />
        <text
          style="font-size: 45px;"
          text-anchor="middle"
          x="200"
          y="190"
        >
          zzz #1
        </text>
        <text
          style="font-size: 30px;"
          text-anchor="middle"
          x="200"
          y="250"
        >
          Empty
        </text>
      </svg>
    </div>
  </div>
</div>
`;
